https://osmium-fpb.vercel.app/about
https://osmium-fpb.vercel.app/about

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>
-    window.location.href="https://notion-next-pink-eight.vercel.app/";
+    window.location.href="https://osmium-fpb.vercel.app/about";
 </script>
 <body>
 </body>
